--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="/recipes/styles.css">
 </head>
 <body>
-    <h1>Recipes</h1>
+    <h1>Odin Recipes</h1>
     <div>
         <ol>
-            <li><a href="/recipes/paella.html">Paella</a></li>
-            <li><a href="/recipes/pescado.html">Pescado</a></li>
-            <li><a href="/recipes/pizza_huevo.html">Pizza</a></li>
+            <li><a href="/paella.html">Paella</a></li>
+            <li><a href="/pescado.html">Pescado</a></li>
+            <li><a href="/pizza_huevo.html">Pizza</a></li>
         </ol>
     </div>
 </body>
