--- a/paella.html
+++ b/paella.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Paella</h1>
 
-    <img src="/recipes/img/paella-age-m.jpg" alt="Paella">
+    <img src="/paella-age-m.jpg" alt="Paella">
 
     <h2>Description</h2>
 
