--- a/pescado.html
+++ b/pescado.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Pescado</h1>
 
-    <img src="/recipes/img/descarga.jpg" alt="Paella">
+    <img src="/descarga.jpg" alt="Paella">
 
     <h2>Description</h2>
 
